# core-kbt

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  LICENSE  README.md  README.ru.md  build-docker-image.sh  push-gh-docker-image.sh  pyproject.toml  run-docker-image.sh  run-gh-docker-image.sh  run.sh  runner.sh
docs/: concept-comparison-colab-example.ru.md  concept-comparison-n8n-example.ru.md
examples/: ai_function_client.py  bfo_translate_prompt.txt.j2  calc_ai_function.py  calc_concept_aspect_comparison.py  calc_concept_set_covering.py  calc_full_perspective_identification.py  calc_minimal_set_covering.py  calc_perspective_concept_relations.py  calc_perspective_feature_comparison_process.py  calc_perspective_features.py  compare_things_by_aspects.py  delete_all_processes.py  demo-clingo.py  estimate_arity2_array_criterial_semantic_equivalence.py  estimate_arity2_array_criterial_semantic_equivalence_items_schema.yaml  estimate_difference.py  estimate_high_order_ontology_classes.py  estimate_llm_tasks_ontology_classes.py  estimate_objects_LCA.py  estimate_objects_aspect_semantic_comparison.py  estimate_ontology_LCA.py  estimate_ontology_aspect_comparison.py  estimate_ontology_instances.py  estimate_ontology_subproperties.py  estimate_term_aspects.py  estimate_texts_LCA.py  estimate_thing_comparison_aspects.py  estimate_things_aspect_comparison.py  estimate_things_comparison_aspects.py  list_best_tasks_for_llm_effectivess.py  merge_items_by_semantics.py  merged_list_best_tasks_for_llm_effectivess.py  rerun_processes.py  test-ai-function.sh  (+21 more)
(+232 files in other folders)
