[project]
name = "llm-kbt"
version = "0.1.0"
description = "LLMs Knowledge Base Trajectory"
authors = [
    { name = "andrey.siver", email = "andrey.siver@gmail.com" }
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "ruamel-yaml (>=0.18.10,<0.19.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "openai (>=1.86.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
