[project]
name = "kbt_core"
version = "0.2.8"
description = "Core Knowledge Base Trajectory"
authors = [
    { name = "andrey.siver", email = "andrey.siver@gmail.com" }
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "flask[async] (>=3.1.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "openai (>=1.86.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "rdflib (>=7.5.0,<8.0.0)",
    "ruamel.yaml (>=0.19.0,<0.20.0)"
]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
